@@ -9,6 +9,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + rfe #2890226 [view] Enable VIEW rename 
 + rfe #838637 [privileges] Export a user's privileges 
 - [core] Updated mootools to fix some glitches with Safari.
++ rfe #2816943 [interface] Add REGEXP ^...$ to select dialog.
 
 3.3.0.0 (not yet released)
 + rfe #2308632 [edit] Use hex for (var)binary fields,
